[package]
name = "crypto-node"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "crypto"
crate-type = ["dylib"]

[build-dependencies]
gcc = "0.3"
neon-build = "0.2"
regex = "1.0"

[dependencies]
ring = { path = "../ring" }
hex = "0.3"
neon = "0.2"
neon-runtime = "0.2"
