[package]
name = "crypto-node"
version = "0.1.0"
authors = ["LongYinan <lynweklm@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "crypto"
crate-type = ["dylib"]

[build-dependencies]
cc = "1"
neon-build = "0.2"
regex = "1.1"

[dependencies]
ring = "0.17.0-alpha.4"
hex = "0.3"
md-5 = "0.8"
neon = "0.2"
neon-runtime = "0.2"
